dark mode issue

--- a/app/internal_packages/thread-list/styles/thread-list.less
+++ b/app/internal_packages/thread-list/styles/thread-list.less
@@ -682,7 +682,7 @@ body.platform-win32 {
   line-height: 31px;
   text-align: center;
   font-size: 20px;
-  color: @white;
+  color: @text-color-inverse;
   border-radius: 50%;
 }
 .outbox-list-narrow,
@@ -722,7 +722,7 @@ body.platform-win32 {
       line-height: 40px;
       text-align: center;
       font-size: 24px;
-      color: @white;
+      color: @text-color-inverse;
       border-radius: 50%;
     }
     .thread-injected-icons {
