--- a/app/internal_packages/ui-dark/styles/ui-variables.less
+++ b/app/internal_packages/ui-dark/styles/ui-variables.less
@@ -60,9 +60,6 @@
   box-shadow: none;
 }
 
-.thread-icon:not(.thread-icon-unread):not(.thread-icon-star) {
-  -webkit-filter: invert(100%);
-}
 img.content-dark {
   -webkit-filter: invert(100%);
 }
